# pvar

./: .travis.yml  CHANGELOG.md  README.md  pvar.cabal  stack-extra-deps.yaml  stack-lts-10.yaml  stack-lts-12.yaml  stack-lts-14.yaml  stack-lts-3.yaml  stack-lts-7.yaml  stack.yaml
.azure/: job.yml  pipelines.yml
pvar/: CHANGELOG.md  Main.hs  README.md  pvar.cabal
pvar/bench/: Bench.hs
pvar/cbits/: .#pvar.c  pvar.c
pvar/src/Data/Prim/: PVar.hs
pvar/src/Data/Prim/Memory/: PVar.hs
pvar/src/Data/Prim/Memory/PVar/: Internal.hs  Unsafe.hs
pvar/src/Data/Prim/PVar/: Internal.hs  Unsafe.hs
pvar/src/Data/Primitive/: PVar.hs
pvar/src/Data/Primitive/PVar/: Internal.hs  Unsafe.hs
pvar/tests/Test/Prim/: PVarSpec.hs
pvar/tests/Test/Prim/Memory/: PVarSpec.hs
pvar/tests/Test/Primitive/: PVarSpec.hs
src/Data/Primitive/: PVar.hs
src/Data/Primitive/PVar/: Internal.hs  Unsafe.hs
