cabal-version: 1.12

name:           pvar
version:        0.1.0.0
synopsis:       Mutable variable with primitive values
description:    Please see the README on GitHub at <https://github.com/lehins/pvar#readme>
homepage:       https://github.com/lehins/pvar#readme
bug-reports:    https://github.com/lehins/pvar/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      Alexey Kuleshevich
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files: README.md
                  , CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/lehins/pvar

library
  exposed-modules: Data.Primitive.PVar
                 , Data.Primitive.PVar.Unsafe
                 -- , Data.Primitive.Bit
                 -- , Data.Primitive.Int8
                 -- , Data.Primitive.Word8
  other-modules: Data.Primitive.PVar.Internal
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
               , primitive >= 0.3.1
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Spec
               , Test.Primitive.PVarSpec
  hs-source-dirs: tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , pvar
               , primitive
               , hspec
               , QuickCheck
               , genvalidity
  default-language: Haskell2010
